--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
         <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
         <link rel='shortcut icon' href='#' />
         <meta name='viewport' content='width=device-width, user-scalable=no'>
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <link rel='shortcut icon' href='{{ STATIC_URL }}assets/favicon.png' type='image/x-icon'> 
 
         <title>tea orbit</title>
