--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
         <link rel='shortcut icon' href='#' />
-        <meta name='viewport' content='width=device-width, user-scalable=no'>
+        <meta name='viewport' content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1'>
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <link rel='shortcut icon' href='{{ STATIC_URL }}assets/favicon.png' type='image/x-icon'> 
@@ -15,7 +15,7 @@
         {% end %}
         <link rel='stylesheet' href='{{ STATIC_URL }}styles/icons.css' type='text/css'> 
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/scrollfix.js'></script>
-        <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/jquery.min.js'></script>
+        <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/jquery.teaorbit.min.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/jquery.cookie.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/jquery.linkify.min.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/libs/jquery.timeago.min.js'></script>
@@ -51,11 +51,13 @@
 
             $(document).ready(function(){
                 $('#type-here').focus();
-                $('body').on('click', function(e){
-                    if(!$(event.target).is('input') && !$(event.target).is('textarea')) {
-                        $('#type-here').focus();
-                    }
-                });
+                if(!$.browser.mobile) {
+                    $('body').on('click', function(e){
+                        if(!$(event.target).is('input') && !$(event.target).is('textarea')) {
+                            $('#type-here').focus();
+                        }
+                    });
+                }
                 window.ui = new UI();
                 {% if client == 'iPhoneTeaOrbit' %}
                     window.ui.init_ios_native_features();
@@ -95,7 +97,7 @@
                         <input type='hidden' name='session' value='' />
                         <input type='hidden' name='chatroom' value='' />
                         <textarea name='spiel' id='type-here' placeholder='Type your message'></textarea>
-                        <input type='submit' class='submit' value='Send' id='submit' />
+                        <button type='submit' class='submit' id='submit' />Submit</button>
                     </form>
                     <!--<canvas id='drawing' width="500" height="300"></canvas>-->
                 </div>
