--- a/templates/index.html
+++ b/templates/index.html
@@ -151,6 +151,11 @@
 
         </script>
         <div id='channels'>
+            <h3>New channel</h3>
+            <div class='go-to'>
+                #<input type='text' />
+            </div>
+            <h3>Recent channels</h3>
             <div class='inner'>
             </div>
         </div>
