--- a/templates/index.html
+++ b/templates/index.html
@@ -108,14 +108,10 @@
                 <div class='inner'>
                 </div>
             </div>
-            <div id='channels'>
-                <a href='#' class='toggle'></a>
-                <div class='inner'>
-                </div>
-            </div>
             <div id='post'>
                 <div class='inner'>
                     <form action='/post'>
+                        <span class='color' id='my-color'></span>
                         <input type='text' name='name' id='name' placeholder='Name (optional)' />
                         <input type='hidden' name='latitude' value='0' />
                         <input type='hidden' name='longitude' value='0' />
