--- a/templates/index.html
+++ b/templates/index.html
@@ -105,6 +105,7 @@
                 <h1 id='logo'><a href='/'><img src='{{ STATIC_URL }}assets/tea-white.png' /><span>tea orbit</span></a></h1>
             </div>
             <div id='chat'>
+                <a href='#' class='load-more' id='load-more'>see older messages</a>
                 <div class='inner'>
                 </div>
             </div>
