--- a/templates/index.html
+++ b/templates/index.html
@@ -44,8 +44,6 @@
                 window.title = "#" + window.chatroom;
                 document.title = window.title;
                 $(document).ready(function() {
-                    $('img.map').hide();
-                    $('.contextual-info').html('You are seeing messages from anyone who opened teaorbit.com/{{ room_name }}');
                     $('#show-hide-details').html('#'+window.chatroom);
                 });
             {% else %}
@@ -99,7 +97,7 @@
     <body>
         <div id='container'>
             <div id='header'>
-                <a id='show-map' href='#' class='button'><span id='show-hide-details'>nearby</span><img class='map desaturate' align='middle' /></a>
+                <a id='show-channels' href='#' class='button'><span id='show-hide-details'>nearby</span></a>
                 <div class='info' id='num-online'>? online</div>
                 <span id='audio'></span>
                 <h1 id='logo'><a href='/'><img src='{{ STATIC_URL }}assets/tea-white.png' /><span>tea orbit</span></a></h1>
@@ -150,9 +148,8 @@
             ga('send', 'pageview');
 
         </script>
-        <div id='map-expanded'>
-            <div class='contextual-info'>You are seeing messages from the area shown<div>
-            <div><img class='map' /></div>
+        <div id='channels'>
+            Go to: <span class='new-channel'>#<input type='text' /></span>
         </div>
     </body>
 </html>
