hashtag link fix attempt

--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
 
         </script>
         <div id='channels'>
-            Go to: <span class='new-channel'>#<input type='text' /></span>
+            <label>Go to: <span class='new-channel'>#<input type='text' value='{{ room_name }}' /></span></label>
         </div>
     </body>
 </html>
